feat: enrich breakpoint logs with exact Maven CLI command
Both [BREAKPOINT] messages now resolve and print the actual mvn call
(executable, all flags, and goal) plus optional JAVA_HOME prefix, so
errors can be reproduced directly from the log output.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>